.deployments/bases/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apidoc
  annotations: {}
spec: {}
